--- a/package.json
+++ b/package.json
@@ -4,13 +4,18 @@
   "description": "",
   "main": "screenshot.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "delete_cookies": "rm -rf '/Users/sghiassy/Library/Application Support/Google/Chrome Canary/Default'",
+    "copy_cookies": "cp -R '/Users/sghiassy/Library/Application Support/Google/Chrome/Default' '/Users/sghiassy/Library/Application Support/Google/Chrome Canary'",
+    "reset_cookies": "yarn delete_cookies; yarn copy_cookies",
+    "start:chrome": "'/Applications/Google Chrome.app/Contents/MacOS/Google Chrome' --remote-debugging-port=9222",
+    "screenshot": "node screenshot.js && open screenshot.jpg"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "openai": "^4.20.1",
     "puppeteer": "^21.5.2",
-    "puppeteer-extra": "^3.3.6"
+    "puppeteer-extra": "^3.3.6",
+    "puppeteer-extra-plugin-stealth": "^2.11.2"
   }
 }
