--- a/package.json
+++ b/package.json
@@ -7,12 +7,13 @@
     "delete_cookies": "rm -rf '/Users/sghiassy/Library/Application Support/Google/Chrome Canary/Default'",
     "copy_cookies": "cp -R '/Users/sghiassy/Library/Application Support/Google/Chrome/Default' '/Users/sghiassy/Library/Application Support/Google/Chrome Canary'",
     "reset_cookies": "yarn delete_cookies; yarn copy_cookies",
-    "start:chrome": "'/Applications/Google Chrome.app/Contents/MacOS/Google Chrome' --remote-debugging-port=9222",
+    "start:chrome": "'/Applications/Google Chrome Canary.app/Contents/MacOS/Google Chrome Canary' --remote-debugging-port=9222",
     "screenshot": "node screenshot.js && open screenshot.jpg"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "dotenv": "^16.4.5",
     "openai": "^4.20.1",
     "puppeteer": "^21.5.2",
     "puppeteer-extra": "^3.3.6",
