--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
   "license": "ISC",
   "dependencies": {
     "dotenv": "^16.4.5",
+    "google-auth-library": "^9.8.0",
+    "google-spreadsheet": "^4.1.1",
     "openai": "^4.20.1",
     "puppeteer": "^21.5.2",
     "puppeteer-extra": "^3.3.6",
