--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,35 @@
 annotated-types==0.6.0
 anyio==4.3.0
+cachetools==5.3.3
 certifi==2024.2.2
+charset-normalizer==3.3.2
 distro==1.9.0
+google-api-core==2.18.0
+google-api-python-client==2.126.0
+google-auth==2.29.0
+google-auth-httplib2==0.2.0
+googleapis-common-protos==1.63.0
+gsheets==0.6.1
 h11==0.14.0
 httpcore==1.0.5
+httplib2==0.22.0
 httpx==0.27.0
 idna==3.7
+oauth2client==4.1.3
 openai==1.23.2
+proto-plus==1.23.0
+protobuf==4.25.3
+pyasn1==0.6.0
+pyasn1_modules==0.4.0
 pydantic==2.7.0
 pydantic_core==2.18.1
+pyparsing==3.1.2
 python-dotenv==1.0.1
+requests==2.31.0
+rsa==4.9
+six==1.16.0
 sniffio==1.3.1
 tqdm==4.66.2
 typing_extensions==4.11.0
+uritemplate==4.1.1
+urllib3==2.2.1
