--- a/requirements.txt
+++ b/requirements.txt
@@ -8,14 +8,17 @@ google-api-core==2.18.0
 google-api-python-client==2.126.0
 google-auth==2.29.0
 google-auth-httplib2==0.2.0
+google-auth-oauthlib==1.2.0
 googleapis-common-protos==1.63.0
 gsheets==0.6.1
+gspread==6.1.0
 h11==0.14.0
 httpcore==1.0.5
 httplib2==0.22.0
 httpx==0.27.0
 idna==3.7
 oauth2client==4.1.3
+oauthlib==3.2.2
 openai==1.23.2
 proto-plus==1.23.0
 protobuf==4.25.3
@@ -26,9 +29,11 @@ pydantic_core==2.18.1
 pyparsing==3.1.2
 python-dotenv==1.0.1
 requests==2.31.0
+requests-oauthlib==2.0.0
 rsa==4.9
 six==1.16.0
 sniffio==1.3.1
+StrEnum==0.4.15
 tqdm==4.66.2
 typing_extensions==4.11.0
 uritemplate==4.1.1
