--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
 annotated-types==0.6.0
 anyio==4.3.0
+appdirs==1.4.4
 cachetools==5.3.3
 certifi==2024.2.2
 charset-normalizer==3.3.2
@@ -17,6 +18,7 @@ httpcore==1.0.5
 httplib2==0.22.0
 httpx==0.27.0
 idna==3.7
+importlib_metadata==7.1.0
 oauth2client==4.1.3
 oauthlib==3.2.2
 openai==1.23.2
@@ -26,7 +28,9 @@ pyasn1==0.6.0
 pyasn1_modules==0.4.0
 pydantic==2.7.0
 pydantic_core==2.18.1
+pyee==11.1.0
 pyparsing==3.1.2
+pyppeteer==2.0.0
 python-dotenv==1.0.1
 requests==2.31.0
 requests-oauthlib==2.0.0
@@ -37,4 +41,6 @@ StrEnum==0.4.15
 tqdm==4.66.2
 typing_extensions==4.11.0
 uritemplate==4.1.1
-urllib3==2.2.1
+urllib3==1.26.18
+websockets==10.4
+zipp==3.18.1
