--- a/package.json
+++ b/package.json
@@ -4,11 +4,12 @@
   "description": "",
   "main": "screenshot.js",
   "scripts": {
-    "delete_cookies": "rm -rf '/Users/sghiassy/Library/Application Support/Google/Chrome Canary/Default'",
     "copy_cookies": "cp -R '/Users/sghiassy/Library/Application Support/Google/Chrome/Default' '/Users/sghiassy/Library/Application Support/Google/Chrome Canary'",
+    "delete_cookies": "rm -rf '/Users/sghiassy/Library/Application Support/Google/Chrome Canary/Default'",
+    "open:sheet": "open 'https://docs.google.com/spreadsheets/d/18_0zVG1l3-HIhPwvSuONZxqwrjOCRN2JYhiiByi06_s/edit#gid=1099111876'",
     "reset_cookies": "yarn delete_cookies; yarn copy_cookies",
-    "start:chrome": "'/Applications/Google Chrome Canary.app/Contents/MacOS/Google Chrome Canary' --remote-debugging-port=9222",
-    "screenshot": "node screenshot.js && open screenshot.jpg"
+    "screenshot": "node screenshot.js && open screenshot.jpg",
+    "start:chrome": "'/Applications/Google Chrome Canary.app/Contents/MacOS/Google Chrome Canary' --remote-debugging-port=9222"
   },
   "author": "",
   "license": "ISC",
